--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
