--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "blogapp",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "client":"npm run dev --prefix client",
+    "dev": "concurrently \"npm start\" \"npm run client\" "
+  },
   "dependencies": {
     "axios": "^1.3.5",
     "express": "^4.18.2",
