--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "client":"npm run dev --prefix client",
-    "dev": "concurrently \"npm start\" \"npm run client\" "
+    "start": "node index.js"
   },
   "dependencies": {
     "axios": "^1.3.5",
@@ -15,3 +13,5 @@
     "nodemon": "^2.0.22"
   }
 }
+
+
